--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<form action='/' method='GET'>
+<form action='/new' method='POST'>
   <input value='name' type='text' name='name'>
   <input value='email' type='text' name='email'>
   <input value='password' type='text' name='password'>
@@ -11,4 +11,3 @@
   <%= user.email %>
   <% end %>
 </p>
-
