error with creating a new table

--- a/views/listings.erb
+++ b/views/listings.erb
@@ -1,3 +1,6 @@
-<p>
-<%= @user_id %>
-</p>
+<form action='/listings' method='POST'>
+<input value='name' type='text' name='name'>
+<input value='description' type='text' name='description'>
+<input value='price_pn' type='integer' name='price_pn'>
+<input type='submit' name='submit'>
+</form>
