--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<form action='/new' method='POST'>
+<form action='/' method='POST'>
   <input value='name' type='text' name='name'>
   <input value='email' type='text' name='email'>
   <input value='password' type='text' name='password'>
@@ -11,3 +11,7 @@
   <%= user.email %>
   <% end %>
 </p>
+
+<form action='/listings' method='GET'>
+  <input type='submit' name='spaces' value='Spaces'>
+</form>
