Add date_from and date_to into space model
User can now select a range of dates in which their property is available.

--- a/views/listings.erb
+++ b/views/listings.erb
@@ -2,5 +2,7 @@
 <input value='name' type='text' name='name'>
 <input value='description' type='text' name='description'>
 <input value='price_pn' type='integer' name='price_pn'>
+<input value='date_from' type='date' name='date_from' placeholder="DD/MM/YYYY">
+<input value='date_to' type='date' name='date_to' placeholder="DD/MM/YYYY">
 <input type='submit' name='submit'>
 </form>
