Add two columns into space table
User can now add in dates for when their space is available.
Those dates are also displayed on the listings page.

--- a/views/listings/all.erb
+++ b/views/listings/all.erb
@@ -3,7 +3,11 @@
   <%= space.name %>
   <%= space.description %>
   <%= space.price_pn %>
+  <%= space.date_from %>
+  <%= space.date_to %>
+
   <% end %>
+  
 </p>
 
 <form action='/listings/new' method='GET'>
