Add logout with sinatra flash message

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,3 +9,4 @@
 <form action='/listings/all' method='GET'>
   <input type='button' name='view_all_listings' value='View all listings'>
 </form>
+<%= flash[:notice] %>
