--- a/views/home.erb
+++ b/views/home.erb
@@ -1,2 +1,5 @@
 <h1>Thank you, <%= @user_obj.name %> </h1>
 <h1>Registration successful!</h1>
+<form action='/logout' method='GET'>
+  <input type='submit' name='logout' value='Logout'>
+</form>
