--- a/views/index.erb
+++ b/views/index.erb
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang = "en-US">
+  <head
+    <meta charset = "UTF-8">
     <title>MakersBnb</title>
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet"
+      type = "text/css"
+      href="css/main.css" />
   </head>
 
-  <style>
-    h1 {
-      text-align: center;
-      color: lightblue;
-    }
-    h2 {
-      text-align: center;
-      color: lightblue;
-    }
-    .content {
-      max-width: 500px;
-      margin: auto;
-    }
 
-  </style>
 
   <body>
+  
     <section>
       <h1>MakersBnB</h1>
       <h2>Not a member? Create an account:</h2>
@@ -37,14 +27,5 @@
 
     </section>
 
-<!-- <p>
-<% User.all.each do |user| %>
-<d>
-  <%= user.name %>
-</d>
-<d>
-  <%= user.email %>
-</d>
-  <% end %>
-</p> -->
+</body>
 </html>
