--- a/views/index.erb
+++ b/views/index.erb
@@ -3,10 +3,10 @@
 </form>
 
 <form action='/login' method='GET'>
-  <input type='button' name='login' value='Login'>
+  <input type='submit' name='login' value='login'>
 </form>
 
 <form action='/listings/all' method='GET'>
-  <input type='button' name='view_all_listings' value='View all listings'>
+  <input type='submit' name='view_all_listings' value='View all listings'>
 </form>
 <%= flash[:notice] %>
