--- a/views/register.erb
+++ b/views/register.erb
@@ -1,4 +1,4 @@
-<form action='/home' method='POST'>
+<form action='/register' method='POST'>
   <input type='text' name='name' value='Name'>
   <input type='text' name='email' value="Email">
   <input type='text' name='username' value='Username'>
