Add feature and unit tests for failed login

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,4 +1,4 @@
-<h1>Thank you for being here, <%= @user_obj.name %> </h1>
+<h1>Welcome, <%= @user_obj.name %> </h1>
 <h1><%= flash[:notice] %></h1>
 <form action='/logout' method='GET'>
   <input type='submit' name='logout' value='Logout'>
