--- a/views/register.erb
+++ b/views/register.erb
@@ -1,7 +1,7 @@
 <form action='/register' method='POST'>
-  <input type='text' name='name' value='Name'>
-  <input type='text' name='email' value="Email">
-  <input type='text' name='username' value='Username'>
-  <input type='text' name='password' value='Password'>
+  <input type='text' name='name' placeholder='Name'>
+  <input type='text' name='email' placeholder="Email">
+  <input type='text' name='username' placeholder='Username'>
+  <input type='text' name='password' placeholder='Password'>
   <input type='submit' name='submit'>
 </form>
