Add feature for request confirmation

--- a/views/listings/all.erb
+++ b/views/listings/all.erb
@@ -20,3 +20,7 @@
 <form action='/listings/new' method='get'>
   <input type='submit' name='Create space' value='Create space'>
 </form>
+
+<form action='/bookings' method='get'>
+  <input type='submit' name='View bookings' value='View bookings'>
+</form>
