--- a/views/listings/req_confirmation.erb
+++ b/views/listings/req_confirmation.erb
@@ -1,1 +1,7 @@
 <h1> Request sent for <%= @request_date %>. </h1>
+
+
+
+<form action='/listings/all' method='get'>
+  <input type='submit' name='Back' value='Back'>
+</form>
