--- a/static/css/all.css
+++ b/static/css/all.css
@@ -1,5 +1,4 @@
 body {
-  /* background-color: #FFDAB9; */
   background-image: url("/images/makersbnb.jpg");
 }
 h1 {
@@ -8,9 +7,8 @@ h1 {
 }
 h2 {
   text-align: center;
-  color: LightSeaGreen;
 }
 .content {
-  max-width: 500px;
+  text-align: center;
   margin: auto;
 }
