--- a/views/index.erb
+++ b/views/index.erb
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang = "en-US">
-  <head
+  <head>
     <meta charset = "UTF-8">
     <title>MakersBnb</title>
-    <link rel="stylesheet"
-      type = "text/css"
-      href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
   </head>
 
-
-
   <body>
-  
+
     <section>
       <h1>MakersBnB</h1>
       <h2>Not a member? Create an account:</h2>
@@ -24,7 +20,6 @@
       <input type='submit' name='submit'>
       </form>
       </div>
-
     </section>
 
 </body>
