--- a/views/listings/new.erb
+++ b/views/listings/new.erb
@@ -1,8 +1,20 @@
-<form action='/listings/new' method='POST'>
-  <input value='name' type='text' name='name'>
-  <input value='description' type='text' name='description'>
-  <input value='price_pn' type='integer' name='price_pn'>
-  <input value='date_from' type='date' name='date_from' placeholder="DD/MM/YYYY">
-  <input value='date_to' type='date' name='date_to' placeholder="DD/MM/YYYY">
-  <input type='submit' name='submit'>
-</form>
+<!DOCTYPE html>
+<html lang = "en-US">
+<head>
+  <meta charset = "UTF-8">
+  <title>New Listing</title>
+  <link rel="stylesheet" type="text/css" href="/css/new.css" />
+</head>
+
+<body>
+  <form action='/listings/new' method='POST'>
+    <input value='name' type='text' name='name'>
+    <input value='description' type='text' name='description'>
+    <input value='price_pn' type='integer' name='price_pn'>
+    <input value='date_from' type='date' name='date_from' placeholder="DD/MM/YYYY">
+    <input value='date_to' type='date' name='date_to' placeholder="DD/MM/YYYY">
+    <input type='submit' name='submit'>
+  </form>
+</body>
+
+</html>
