--- a/views/home.erb
+++ b/views/home.erb
@@ -3,3 +3,9 @@
 <form action='/logout' method='GET'>
   <input type='submit' name='logout' value='Logout'>
 </form>
+
+<a href="/listings/all">View Listings</a>
+
+
+
+
