--- a/views/login.erb
+++ b/views/login.erb
@@ -1,6 +1,6 @@
 <form action='/login' method='POST'>
   <input type='text' name='username' placeholder='username'>
-  <input type='text' name='password' placeholder='password'>
+  <input type='password' name='password' placeholder='password'>
   <input type='submit' name='submit'>
 </form>
 <%=flash[:notice]%>
