Add booking creation

--- a/views/bookings.erb
+++ b/views/bookings.erb
@@ -1,9 +1,11 @@
 <% Request.all.each do |request| %>
 <div class='request'>
+  <%= request.id %>
   <%= request.date %>
   <%= request.user_id %>
-  <form action='/listings/all' method='post'>
+  <form action='/listings/req_approval' method='post'>
     <input type='submit' name='confirm' value='confirm'>
+    <input type='hidden' name="request_id" value='<%= request.id %>'>
   </form>
 
   <form action='/listings/all' method='post'>
